FileFormatResource: accept multiple ids in a single request (#4734)
* FileFormatResource: accept multiple ids in a single request
* Change from GET endpoints to POST

Signed-off-by: Jimmy Tanagra <jcode@tanagra.id.au>